2008-02-18  Sayamindu Dasgupta  <sayamindu@gmail.com>

	* lib/util.py: Make it work; import fnmatch.

	* lib/util.py (should_ignore_dir): Fix the recursive call.

2008-02-18  Federico Mena Quintero  <federico@novell.com>

	* lib/util.py (should_ignore_dir): Moved over from dirmonitor.py;
	now this is a general-purpose function instead of being specific
	to the directory monitor.
	(should_ignore_file): Likewise.

	* lib/dirmonitor.py (DirectoryMonitor.__should_ignore_dir):
	Implement in terms of util.should_ignore_dir().
	(DirectoryMonitor.__should_ignore_file): Implement in terms of
	util.should_ignore_file().

2008-02-16  John Robeson  <johnny@localmomentum.net>

     fix an indent in lib/userdb.py

2008-02-15  John Robeson  <johnny@localmomentum.net>

    * TABS to spaces
      lib/cache.py
      lib/userdb.py

2008-02-15  John Robeson  <johnny@localmomentum.net>

    * TABS to spaces
      admin-tool/profilesdialog.py
      lib/dirmonitor.py
      lib/storage.py
      lib/userpofile.py
      lib/sources/paneldelegate.py

2008-02-15  John Robeson  <johnny@localmomentum.net>

    * remove gnomesu from desktop.in 
      Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=479771

2008-02-05  John Robeson  <johnny@localmomentum.net>

    * remove deprecated encoding key in desktop.in
    * add some X-GNOME keys to desktop.in

2008-01-30  John Robeson  <johnny@localmomentum.net>

    update gentoo support in configure.ac

2008-01-21  John Robeson  <johnny@localmomentum.net>

	typo fix mozilla_bookmarks.py s/implict_close_tags/implicit_close_tags/
    actually pass the excluded attributes  

2008-01-19  Hans Petter Jansson  <hpj@novell.com>

	Actual 2.21.0 release made here.

2008-01-17  Federico Mena Quintero  <federico@novell.com>

	* sabayon.spec.in: Removed; this specfile is really obsolete anyway.

	* Makefile.am: Remove references to the specfile.

2008-01-17  John Robeson <johnny@localmomentum.net>

    Make mandatory attribute in metadata xml files work